solved works but hist results in too large url

--- a/app/assets/stylesheets/flatcube.css.scss
+++ b/app/assets/stylesheets/flatcube.css.scss
@@ -3,13 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-div {
- border: 1px solid black;
- border-collapse: collapse;
+#text {
+  position: absolute;
+  z-index: 0;
 }
 
-
-    
 
 #s {
 
@@ -22,6 +20,8 @@ div {
 }
 
 #container {
+  z-index: -1;
+  position: absolute;
   border:0;
   Margin-left:auto;
   Margin-right:auto;
